# CENet_m_detector_ws

./: README.md
m_detector_semantic/: CMakeLists.txt  package.xml
m_detector_semantic/config/: m_detector_semantic.yaml  m_detector_semantic.yaml.backup  semantic-kitti.yaml
m_detector_semantic/docs/: docs_README_Version2.md
m_detector_semantic/include/m-detector/: DynObjCluster.h  DynObjFilter.h  SemanticSegmentor.h  parallel_q.h  types.h
m_detector_semantic/launch/: dynfilter_semantic.launch
m_detector_semantic/rviz/: semantic_visual.rviz
m_detector_semantic/scripts/: build.sh  cenet_inference.py  install_pytorch.sh  install_pytorch_auto.sh  setup_cenet.sh  setup_cenet_full.sh  start_m_detector_conda.sh  start_m_detector_final.sh  test_integration.sh
m_detector_semantic/src/: DynObjCluster.cpp  DynObjFilter.cpp  SemanticSegmentor.cpp  dynfilter_with_odom_semantic.cpp  visualization_semantic.cpp
